Revert "Fix vertical wrapped content on `Button` (#241)" (#245)

--- a/styles/components/Button.scss
+++ b/styles/components/Button.scss
@@ -57,6 +57,7 @@
   position: relative;
   display: inline-block;
   white-space: nowrap;
+  line-height: var(--button-height);
   padding: 0 var(--space-m);
   margin-right: var(--space-xs);
   margin-bottom: var(--space-xs);
@@ -70,11 +71,10 @@
   }
 
   &__content {
-    display: flex; // Inline flex will broke ellipsis, don't change it.
-    align-items: center;
+    display: block;
     align-self: stretch;
     min-height: var(--button-height);
-    width: 100%; // do not change to fit-content, it will break ellipsis
+    width: fit-content;
   }
 
   .Button--icon {
@@ -105,13 +105,10 @@
 
   &--compact {
     padding: 0 var(--space-s);
+    line-height: 1.333em;
 
     &.Button--hasIcon .Button--icon {
       margin: 0 var(--space-xxs);
-    }
-
-    .Button__content {
-      min-height: calc(var(--button-height) * 0.8);
     }
   }
 
@@ -129,12 +126,7 @@
     display: block;
     overflow: hidden;
     text-overflow: ellipsis;
-    // margin-right: calc(-1 * var(--space-s));
-
-    white-space: nowrap;
-    .Button__content {
-      overflow: hidden;
-    }
+    margin-right: calc(-1 * var(--space-s));
   }
 
   // We don't need additional margin if button inside stack
